--- a/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
+++ b/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RssFeedTranslator.Utils.DeepL\RssFeedTranslator.Utils.DeepL.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.Utils\RssFeedTranslator.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
