--- a/RssFeedTranslator/RssFeedTranslator.Utils.DeepL/RssFeedTranslator.Utils.DeepL.csproj
+++ b/RssFeedTranslator/RssFeedTranslator.Utils.DeepL/RssFeedTranslator.Utils.DeepL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DeepL.net" Version="1.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RssFeedTranslator.Utils\RssFeedTranslator.Utils.csproj" />
   </ItemGroup>
 
