--- a/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
+++ b/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RssFeedTranslator.Utils.DeepL\RssFeedTranslator.Utils.DeepL.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.Utils.Json\RssFeedTranslator.Utils.Json.csproj" />
     <ProjectReference Include="..\RssFeedTranslator.Utils\RssFeedTranslator.Utils.csproj" />
   </ItemGroup>
 
