--- a/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
+++ b/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="MaterialDesignColors" Version="2.1.4" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 
