* make WinUI3 frontend work
* placed ViewModels in a seperate project to be shared between WPF and WinUI3 frontend

--- a/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
+++ b/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\RssFeedTranslator.Utils.DeepL\RssFeedTranslator.Utils.DeepL.csproj" />
     <ProjectReference Include="..\RssFeedTranslator.Utils.Json\RssFeedTranslator.Utils.Json.csproj" />
     <ProjectReference Include="..\RssFeedTranslator.Utils\RssFeedTranslator.Utils.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.ViewModels\RssFeedTranslator.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
