--- a/RssFeedTranslator/RssFeedTranslator.WinUI3/RssFeedTranslator.WinUI3.csproj
+++ b/RssFeedTranslator/RssFeedTranslator.WinUI3/RssFeedTranslator.WinUI3.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>RssFeedTranslator.WinUI3</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -34,7 +34,13 @@
     package has not yet been restored.
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-    <ProjectCapability Include="Msix"/>
+    <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RssFeedTranslator.Utils.DeepL\RssFeedTranslator.Utils.DeepL.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.Utils.Json\RssFeedTranslator.Utils.Json.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.Utils\RssFeedTranslator.Utils.csproj" />
+    <ProjectReference Include="..\RssFeedTranslator.ViewModels\RssFeedTranslator.ViewModels.csproj" />
   </ItemGroup>
 
   <!-- 
