--- a/RssFeedTranslator/RssFeedTranslator.WinUI3/RssFeedTranslator.WinUI3.csproj
+++ b/RssFeedTranslator/RssFeedTranslator.WinUI3/RssFeedTranslator.WinUI3.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.230913002" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
