--- a/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
+++ b/RssFeedTranslator/RssFeedTranslator/RssFeedTranslator.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 
